# hard_kick_sampler

./: .gitignore  Cargo.toml  README.md  bundler.toml  loaded_vst.filtergraph
src/: adsr.rs  editor.rs  lib.rs  params.rs  plugin.rs  sample_wrapper.rs  shared_states.rs  tasks.rs  utils.rs
src/editor/: knob.rs  mod.rs  theme.rs  waveform.rs  widgets.rs
src/editor_vizia/: events.rs  mod.rs  style.css  style.rs  theme.css
src/editor_vizia/customs/: adsr.rs  blend.rs  mod.rs
src/editor_vizia/icons/: mod.rs
src/editor_vizia/widgets/: button_toggle.rs  drag_to_change.rs  grid.rs  icon_button_toggle.rs  knob.rs  mod.rs  panel.rs  radio.rs  svg_icon.rs  toggle.rs  waveform.rs  widget_base.rs
src/pitch_shift/: classic.rs  mod.rs  psola.rs
