[package]
name = "hard_kick_sampler"
version = "0.1.0"
edition = "2021"
authors = ["Sacha RENAULT <contact@sacharenault.ovh>"]
license = "GPL-3.0-or-later"
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "Sample kick that goes brrrrr"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
hound = "3.5"
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
egui = "0.31.1"
rfd = "0.15.3"
egui_plot = "0.32.1"
egui_knob = "0.3.0"
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
